[package]
name = "a_star"
version = "0.1.0"
authors = ["the 8th mage <eee34353@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sdl2 = { version = "0.33.0", features = ["bundled","static-link"]}
gl = ""